mejoras estetica y header responsive

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,37 +10,25 @@
     <%- include ("./partials/header")  %>
 
     <main>
-        <section class="main-section">
+            <section class="banner-index">
 
-            <article class="section-img">
-                    <img src="/img/bannerHome.jpg" alt="imagen principal del index">
-            </article>
-
-        </section>
-
-        <section class="main-section2">
-            
-            <h3>¿Por que comprar con nosotros?</h3>
-
-            <article>
-
-                <div>
-                    <i class="fa-solid fa-truck-fast"></i>
-                    <p>Servicio de entrega</p>                    
+                <div class="logo-index">
+                    <img class="img1" src="/img/logo3.png" alt=""> 
                 </div>
 
                 <div>
-                    <i class="fa-solid fa-medal"></i>
-                    <p>Garantía</p>
+                    <img  class="img2" src="/img/off.jpg" alt="">
+                    <p>DESCUENTOS INCREÍBLES</p>
                 </div>
 
                 <div>
-                    <i class="fa-solid fa-headset"></i>
-                    <p>Soporte en línea</p>                   
+                    <img  class="img3" src="/img/tarjeta.jpg" alt="">
+                    <p>CUOTAS SIN INTERÉS</p>
                 </div>
-            </article>
 
-        </section>
+            </section>                
+                
+        
 
         <section class="main-section3">
             
