--- a/public/css/estilos.css
+++ b/public/css/estilos.css
@@ -1,31 +1,31 @@
 
 /*INDEX*/
-header-box.li fa-solid fa-user {
-    display: none;
-}
 
-.main-section article img {
+.banner-index {
     width: 100%;
+    background-color: #000;
+    padding: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: #fff;
+    font-size: 0.8em;
+    padding: 0 10px;
+    margin-bottom: 20px;
+    
 }
 
-.main-section2 {    
-    margin-top: 10px;
-    padding-top: 5px;
-    border: solid var(--lila) 2px;
+.banner-index div {
+    width: 30%;
+    margin: 5px;
     text-align: center;
 }
 
-.main-section2 article {
-    margin-top: 10px;
-    padding: 10px;
-    display: flex;
-    
-    
-    justify-content: center;
+.banner-index div .img1, .img2, .img3  {
+    width: 100%;
 }
 
-.main-section2 article div {
-    padding: 5px;
+.banner-index div .img2, .img3  {
     width: 80%;
 }
 
@@ -60,15 +60,32 @@ header-box.li fa-solid fa-user {
 
 @media (min-width: 576px) {
 
-    .main-section2 article div {
-        width: 30%;
+    .banner-index {
+        font-size: 1.2em;
     }
+
+    .banner-index div {
+        width: 25%;
+        
+    }
+    
     .main-section3 article {
         width: 50%;
     }
 }
 
 @media (min-width: 768px) {
+
+    .banner-index  {
+        padding: 0 50px;
+       
+    }
+    
+
+    .banner-index div {
+        width: 20%;
+        
+    }
     
     .main-section3 {
         justify-content: space-between;
@@ -80,16 +97,9 @@ header-box.li fa-solid fa-user {
 
 @media (min-width: 1024px) {
 
-    .main-section2 h3 {
-        font-size: 22px;
-    }
-
-    .main-section2 article p {
-        font-size: 22px;
-    }
-
-    .main-section2 i {
-        font-size: 22px;
+    .banner-index div {
+        width: 15%;
+        
     }
 
     .main-section3 h3{
