--- a/public/css/general.css
+++ b/public/css/general.css
@@ -10,90 +10,127 @@
     margin: 0;
     padding: 0;
     font-family: 'Titillium Web', sans-serif;
-    font-size: 1em;
-}
-
-
-/*HEADER*/
-
-header {
-    background-color: #000;
-    color: #fff;
-    width: 100%;
-    top: 0;
-}
-
-.header-box {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 120px;
-    border-bottom: solid var(--amarillo) 4px;
-}
-
-.logo img {
-    max-height: 130px;
-}
-
-.header-box nav {
-    display: none;
-    margin-right: 10px;
-}
-
-.header-box nav ul {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    list-style: none;
-}
-
-.header-box nav ul li {
-    padding-right: 20px;
     
 }
 
-.header-box nav ul li a {
+body {
+    background-color: #525558;
+}
+section {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 5px;
+}
+/*HEADER*/
+
+.header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1000;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #000;
+    width: 100%;
+    height: 60px;
+    border-bottom: solid var(--amarillo) 4px;
+    padding: 10px 20px 10px 10px;
+}
+
+.header a, .header i {
     text-decoration: none;
     color: #fff;
 }
 
+.logo { 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 50px;
+}
 
-.fa-user {
+.logo img {
+    height: 40%;
+}
+
+.nav-header {
+    background-color: #000;
+    position: absolute;
+    top: 60px;
+    right: -100%;
+    width: 150px;
+    transition: all 0.3s;
+}
+
+
+.menu, .submenu {
+    display: flex;
+    flex-direction: column;
+    
+}
+
+.submenu li {
     color: #fff;
-    padding: 8px;
-    border: solid var(--amarillo) 1px;
-    border-radius: 50%;
 }
 
-.fa-cart-shopping {
-    color: var(--verde);
-    font-size: 20px;
+.menu-item {
+     list-style: none;
+     padding: 10px;
+     
 }
+
+.menu-item_link {
+    
+    background-color: #000;
+    font-size: 0.8em;
+}
+
 
 .menu-burger {
-    border: solid var(--lila) 1px;
-    padding: 5px;
-    margin-right: 20px;
+    background-color: #000;
+    cursor: pointer;
+    font-size: 1.5em;
+    
 }
+
+.mostrar {
+    right: 0;
+    top: 60px;
+}
+
 
 @media (min-width: 768px) {
+   
+    .header {
+        height: 80px;
     
-    
+    }
+   
     .menu-burger {
-       display: none;
+        display: none;
     }
 
-    .header-box nav {
-        display: block;
+    .nav-header {
+        top: 20px;
+        right: 20px;
+        width: max-content;
+        transition: none;
     }
 
-}
+    .menu {
+        flex-direction: row;
+    }
+ 
+    
+}  
 /*--------------------------------------------------------------*/
+
 
 /*MAIN*/
 
 main {
-    margin-top: 10px;
+    margin-top: 100px;
     margin-bottom: 30px;
     margin-left: auto;
     margin-right: auto;
@@ -128,6 +165,7 @@ main a {
     justify-content: space-between;
     align-items: center;
     padding-bottom: 5px;
+   
     
 }
 
