--- a/views/login.ejs
+++ b/views/login.ejs
@@ -36,6 +36,8 @@
                 <a href="#">¿Perdiste tu contraseña?</a>
                 <a href="/users/register">¿No tienes cuenta?, Registrate</a>
             </form>
+            <p>administrador@administrador.com</p>
+            <p>pass: 123456</p>
         </section>     
     </main>
 
