--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,54 +1,46 @@
-<header>
+<header class="header">
     
-    <section class="header-box">
-
         <div class="logo">
-            <a title="Dragon Tech" href="https://damp-ridge-01994.herokuapp.com/"><img src="/img/logo.png" alt="logo"></a>
+           <img src="/img/logo2.png" alt="">
         </div>
+        
+        <nav class="nav-header" id="menu">
 
-        <nav class="nav-header">
+        <ul class="menu" id="menu">    
 
-        <ul class="menu">    
-            <li class="menu-item"><a class="menu-item_link" href="/">Home</a></li>
-            <li class="menu-item"><a class="menu-item_link" href="/productos/productList">Productos</a></li>
-            
-            
-            
-          
-            
+            <li class="menu-item"><a class="menu-item_link" href="/"><i class="fa-solid fa-house"></i>  HOME</a></li>
+            <li class="menu-item"><a class="menu-item_link" href="/productos/productList"><i class="fa-solid fa-list-ul"></i>  PRODUCTOS</a></li>
+                  
         
             <% if (locals.isLogged) { %>
 
                 <% if (locals.userLogged.categoria === "administrador" ) { %>
-                    <li class="menu-item"><a class="menu-item_link" href="/administrador">administrador</a></li>
+                    <li class="menu-item"><a class="menu-item_link" href="/administrador"><i class="fa-solid fa-screwdriver-wrench"></i>  ADMINISTRADOR</a></li>
                 <% } %>
 
-                    <li class="menu-itemContainer"><a class="menu-item_link submenu-btn" href="#"><i class="fa-solid fa-user"></i> <%= locals.userLogged.nombre %> <i class="fa-solid fa-caret-down"></i></a>
-                        <ul class="submenu">
-                            <li class="menu-item"><a class="menu-item_link" href="/users/userProfile">Perfil</a></li>
-                            <li class="menu-item"><a class="menu-item_link" href="/users/userLogout">Salir</a></li>
-                        </ul>
+                    <li class="menu-item"><a class="menu-item_link" href="/users/userProfile"><i class="fa-solid fa-user"></i>  <%= locals.userLogged.nombre %>  <i class="fa-solid fa-caret-down"></i></a>
+                        
                     </li>
 
             <% } else { %>
         
-                <li class="menu-item"><a class="menu-item_link" href="/users/login">Login</a></li>
-                <li class="menu-item"><a class="menu-item_link" href="/users/register">Registrarse</i></a></li>
+                <li class="menu-item"><a class="menu-item_link" href="/users/login"><i class="fa-solid fa-arrow-right-to-bracket"></i>  LOGIN</a></li>
+                <li class="menu-item"><a class="menu-item_link" href="/users/register">REGISTRO</i></a></li>
 
             <% } %>
 
+            <li class="menu-item"><a class="menu-item_link" href="#"><i class="fa-solid fa-cart-shopping"></i>  CARRITO </i></a></li>
+            
             
 
         </ul>
         
     </nav>
     
-    <div class="menu-burger">
-        <i class="fa-solid fa-bars"></i>
+    <div class="menu-burger" id="btnMenu">
+        <a href="#"> <i class="fa-solid fa-bars"></i> </a>
+
     </div>
 
-    </section>
-    
-
-    
+    <script src="/js/menuHeader.js"></script>
 </header>
