productos en administrador

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -29,7 +29,7 @@
 
             <% } %>
 
-            <li class="menu-item"><a class="menu-item_link" href="#"><i class="fa-solid fa-cart-shopping"></i>  CARRITO </i></a></li>
+            <li class="menu-item"><a class="menu-item_link" href="/productos/productCart"><i class="fa-solid fa-cart-shopping"></i>  CARRITO </i></a></li>
             
             
 
