--- a/views/administrador.ejs
+++ b/views/administrador.ejs
@@ -20,7 +20,7 @@
             </div>
 
             <div>
-                <a href="#">PRODUCTOS</a>
+                <a href="/administrador/productListAdm">PRODUCTOS</a>
             </div>
 
         </section>
