--- a/views/usersList.ejs
+++ b/views/usersList.ejs
@@ -31,7 +31,7 @@
                         <p>F.Nacimiento: <%= element.fechaNacimiento %> 
                         <p>Telefono: <%= element.telefono %> </p>
                         <p>Email: <%= element.email %> </p>
-                        <p>Categoria: <%= element.categoria %> </p>
+                        <p>Rol: <%= element.rol.nombre %> </p>
                         
                     </div>
 
