--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -14,7 +14,7 @@
         
             <% if (locals.isLogged) { %>
 
-                <% if (locals.userLogged.categoria === "administrador" ) { %>
+                <% if (locals.userLogged.roles_id === 2 ) { %>
                     <li class="menu-item"><a class="menu-item_link" href="/administrador"><i class="fa-solid fa-screwdriver-wrench"></i>  ADMINISTRADOR</a></li>
                 <% } %>
 
