--- a/views/usersEdit.ejs
+++ b/views/usersEdit.ejs
@@ -15,17 +15,18 @@
 
             <h2>Edicion de Usuario</h2>
 
-            <p>ID: <%= userEdit.id %></p>
+            <p>ID: <%= usuario.id %></p>
 
-            <img src="/img/imgUsers/<%= userEdit.img %>" alt="">
+            <img src="/img/imgUsers/<%= usuario.img %>" alt="">
             
-            <form action="/administrador/usersEdit/<%= userEdit.id %>?_method=PUT" method="POST" enctype="multipart/form-data">
+            <form action="/administrador/usersEdit/<%= usuario.id %>?_method=PUT" method="POST" enctype="multipart/form-data">
                 
+
                 <input 
                 type="text" 
                 name="nombre"  
                 placeholder="Nombre" 
-                value="<%= userEdit.nombre %>">
+                value="<%= usuario.nombre %>">
                 
                 <% if (locals.errors && errors.nombre) { %>
                     <div class="text-danger">
@@ -37,7 +38,7 @@
                 type="text" 
                 name="apellido" 
                 placeholder="Apellido" 
-                value="<%= userEdit.apellido %>">
+                value="<%= usuario.apellido %>">
                 
                 <% if (locals.errors && errors.apellido) { %>
                     <div class="text-danger">
@@ -49,7 +50,7 @@
                 type="text" 
                 name="documento" 
                 placeholder="Documento" 
-                value="<%= userEdit.documento %>">
+                value="<%= usuario.documento %>">
                 
                     <% if (locals.errors && errors.documento) { %>
                         <div class="text-danger">
@@ -60,7 +61,7 @@
                 <input 
                 type="date" 
                 name="fechaNacimiento" 
-                value="<%= userEdit.fechaNacimiento %>">
+                value="<%= usuario.fechaNacimiento %>">
                 
                     <% if (locals.errors && errors.fechaNacimiento) { %>
                         <div class="text-danger">
@@ -72,7 +73,7 @@
                 type="text" 
                 name="telefono" 
                 placeholder="Telefono" 
-                value="<%= userEdit.telefono %>">
+                value="<%= usuario.telefono %>">
                 
                     <% if (locals.errors && errors.telefono) { %>
                         <div class="text-danger">
@@ -84,7 +85,7 @@
                 type="text" 
                 name="email" 
                 placeholder="Email" 
-                value="<%= userEdit.email %>">
+                value="<%= usuario.email %>">
                 
                     <% if (locals.errors && errors.email) { %>
                         <div class="text-danger">
@@ -92,17 +93,21 @@
                         </div>
                     <% } %>
                 
-                <select name="categoria" >
-                    <option value="">Seleccione una opción</option>
-                    <option value="administrador" <%= userEdit.categoria === "administrador" ? "selected" : "" %> >Administrador</option>
-                    <option value="cliente" <%= userEdit.categoria === "cliente" ? "selected" : "" %> >Cliente</option>
-                </select>
+                    <select name="roles_id">
+                        <% roles.forEach(rol => { %>
+    
+                            <% if (rol.id === usuario.roles_id) { %>
+                                <option value="<%= rol.id %>" selected><%= rol.nombre %></option>
+                            <% } else { %>    
+                                <option value="<%= rol.id %> "><%= rol.nombre %> </option>
+                            <% } %>
+    
+                         
+                        <% }) %>
+                        
+                    </select>
                 
-                    <% if (locals.errors && errors.categoria) { %>
-                        <div class="text-danger">
-                            <%= errors.categoria.msg %> 
-                        </div>
-                    <% } %>
+                    
                 
                 <input 
                 type="file" 
@@ -121,7 +126,7 @@
                 type="password" 
                 name="password" 
                 placeholder="Paswword"
-                value="<%= userEdit.password %>">
+                value="<%= usuario.password %>">
                 
                 
                 <% if (locals.errors && errors.password) { %>
@@ -129,6 +134,13 @@
                         <%= errors.password.msg %> 
                     </div>
                 <% } %>
+
+                    
+                    <select name="activo" >
+                        <option value="1" <%= usuario.activo === 1 ? "selected" : "" %> >activo</option>
+                        <option value="0" <%= usuario.activo === 0 ? "selected" : "" %> >inactivo</option> 
+                    </select>    
+                     
                 
                 <br>
      
