--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -15,7 +15,7 @@
             <% if (locals.isLogged) { %>
 
                 <% if (locals.userLogged.roles_id === 2 ) { %>
-                    <li class="menu-item"><a class="menu-item_link" href="/administrador"><i class="fa-solid fa-screwdriver-wrench"></i>  ADMINISTRADOR</a></li>
+                    <li class="menu-item"><a class="menu-item_link" href="/administrador"><i class="fa-solid fa-screwdriver-wrench"></i>  ADMINISTRAR</a></li>
                 <% } %>
 
                     <li class="menu-item"><a class="menu-item_link" href="/users/userProfile"><i class="fa-solid fa-user"></i>  <%= locals.userLogged.nombre %>  <i class="fa-solid fa-caret-down"></i></a>
