--- a/views/productList.ejs
+++ b/views/productList.ejs
@@ -11,7 +11,7 @@
 
     <main>
         <!--Nav de categorias-->
-            
+        <%- include ("./partials/nav-categorias")  %>
         
         <section class="productList">
 
