validaciones login y register front

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -41,8 +41,11 @@
         </section>     
     </main>
 
+    <script src="/js/userValidator/loginValidations.js"></script>
+
     <!--Footer-->
     <%- include ("./partials/footer")  %> 
-    
+
+   
 </body>
 </html>
