--- a/views/register.ejs
+++ b/views/register.ejs
@@ -120,6 +120,8 @@
 
     </main>
 
+    <script src="/js/userValidator/registerValidations.js"></script>
+
     <!--Footer-->
     <%- include ("./partials/footer")  %> 
     
