--- a/views/productList.ejs
+++ b/views/productList.ejs
@@ -25,8 +25,8 @@
                         <img src="/img/imgProducts/<%= element.img  %>" alt="">
                     </a> 
                     <a href="/productos/productDetail/<%= element.id %> ">
-                        <h3><%= element.marca  %> </h3>
-                        <p><%= element.modelo  %></p>
+                        <p><b> <%= element.marca  %> </b></p>
+                        <p> <%= element.modelo  %></p>
                     </a>
                    
                     <p><%= element.precio  %> </p>
