--- a/views/productListAdm.ejs
+++ b/views/productListAdm.ejs
@@ -33,7 +33,7 @@
                         <img src="/img/imgProducts/<%= element.img  %>" alt="">
                      
                     
-                        <h3><%= element.marca  %> </h3>
+                        <p><b><%= element.marca  %> </b></p>
                         <p><%= element.modelo  %></p>
                     
                    
