--- a/views/categorias.ejs
+++ b/views/categorias.ejs
@@ -42,7 +42,7 @@
                         <p><%= element.modelo  %></p>
                     </a>
 
-                    <p><%= element.precio  %> </p>
+                    <p>$ <%= element.precio.toLocaleString()  %> </p>
 
                     <div>
                         <button class="buttom-carrito" type="submit">AGREGAR AL CARRITO</button>
