--- a/views/index.ejs
+++ b/views/index.ejs
@@ -42,7 +42,7 @@
                         <p><%= element.modelo %> </p>
                         <p>ver detalle</p>
                     </a>
-                    <p><%= element.precio %> </p>
+                    <p>$ <%= element.precio.toLocaleString() %> </p>
                 </article>
 
            
