--- a/views/login.ejs
+++ b/views/login.ejs
@@ -25,7 +25,7 @@
                 <input class='password' type="password" name="password" required placeholder="PASSWORD" minlength="5" required>
 
                 
-                <input type="checkbox" name="recordar_usuario"> Recordar mi usuario
+                <input class='bottom-check' type="checkbox" name="recordar_usuario"> Recordar mi usuario
                 
                 <button class="bottom-login" type="submit">INGRESAR</button>  
 
